--- a/LightHub-Serve/package.json
+++ b/LightHub-Serve/package.json
@@ -10,6 +10,7 @@
     "koa-body": "^4.2.0",
     "koa-jwt": "^4.0.3",
     "koa-router": "^10.1.1",
+    "koa2-cors": "^2.0.6",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   },
