--- a/LightHub/package.json
+++ b/LightHub/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "lodash": "^4.17.21",
+    "md-editor-v3": "^1.7.2",
     "sass": "^1.43.4",
     "scss": "^0.2.4",
     "vue": "^3.2.16",
