--- a/LightHub/package.json
+++ b/LightHub/package.json
@@ -7,11 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.5",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "md-editor-v3": "^1.7.2",
-    "sass": "^1.43.4",
-    "scss": "^0.2.4",
+    "postcss-import": "^14.0.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
